# RustUwU-3XD

./: .env  .gitattributes  Cargo.toml  README.md
src/: api.rs  check.rs  database.rs  main.rs  validate.rs
