[package]
name = "ecra"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = "0.9.0"
sqlx = { version = "0.5", features = ["mysql", "runtime-actix-rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4.0"
actix-rt = "2.5"
dotenv = "0.15"
reqwest = { version = "0.11", features = ["multipart"] }
actix-multipart = "0.4"
sanitize-filename = "0.3"
futures = "0.3"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["io"] }
glib = "0.10"
bytes = "1.0" 
